--- a/Thuật toán điều kiện/algo_condition.html
+++ b/Thuật toán điều kiện/algo_condition.html
@@ -5,31 +5,30 @@
     <title>Thuật toán điều kiện</title>
 </head>
 <body>
-    <script>
-        function findMaxNumbers() {
-            let a, b, c;
-            let max=a;
-        a= Number(a);
-        b= Number(b);
-        c= Number(c);
-        a= document.getElementById("a").value;
-        b= document.getElementById("b").value;
-        c= document.getElementById("c").value;
-        if (max<b)
-        {
+<script>
+    let a,b,c;
+    function findMaxNumbers() {
+        let max;
+        a = Number(document.getElementById('a').value);
+        b = Number(document.getElementById('b').value);
+        c = Number(document.getElementById('c').value);
+        max = a;
+        if (max < b) {
             max = b;
+            if (max < c) {
+                max = c;
+            }
         }
-        if (max < c)
-        {
+        else if (max < c) {
             max = c;
         }
-            alert(max);
-        }
-    </script>
-    <input id="a" type="text">
-    <input id="b" type="text">
-    <input id="c" type="text">
+        alert(max);
+    }
 
-<button type="button" onclick="findMaxNumbers();">Click</button>
+</script>
+<input  type="text" id="a">
+<input id="b" type="text">
+<input id="c" type="text">
+<button type="button" onclick="findMaxNumbers()">Click</button>
 </body>
 </html>
